[gd_scene load_steps=13 format=3 uid="uid://blbbvgkdy81b0"]

[ext_resource type="Script" path="res://scenes/guide.gd" id="1_141rj"]
[ext_resource type="PackedScene" uid="uid://pu28el6n6ols" path="res://scenes/brain_v2.tscn" id="2_2hwsl"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="2_xjjh2"]
[ext_resource type="Theme" uid="uid://ykp3sijrtrkk" path="res://main_theme.tres" id="6_drfbh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_qrmke"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_g86ti"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_3nrxm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="8_c1454"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_u1hkt"]
[ext_resource type="Texture2D" uid="uid://d0rdoqyxbi45h" path="res://icon.svg" id="10_q3rvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rfskh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mu5s2"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0

[node name="GuideScreen" type="Control" node_paths=PackedStringArray("region_info", "type_dropdown", "description_label", "summary_tooltip", "tab_container", "cursor")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_141rj")
region_info = NodePath("ProjectWrapper/BrainPanel/Brain")
type_dropdown = NodePath("ProjectWrapper/Sidebar/InnerSidebar/Types Overview/Types")
description_label = NodePath("RegionDescriptionOverlay/MarginContainer/ScrollContainer/DescriptionWrapper/Title")
summary_tooltip = NodePath("TooltipContainer")
tab_container = NodePath("ProjectWrapper/Sidebar/InnerSidebar")
cursor = NodePath("Sprite2D")
metadata/_edit_horizontal_guides_ = []

[node name="StateManager" type="Node" parent="."]

[node name="ProjectWrapper" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 900

[node name="BrainPanel" type="CenterContainer" parent="ProjectWrapper"]
custom_minimum_size = Vector2(639, 0)
layout_mode = 2

[node name="Brain" parent="ProjectWrapper/BrainPanel" instance=ExtResource("2_2hwsl")]
scale = Vector2(1, 1)

[node name="P4Coll" parent="ProjectWrapper/BrainPanel/Brain/BrainRegions/RegionsArea" index="23"]
polygon = PackedVector2Array(-58.0001, -49.9998, -56, 20, -20, 86, 63, 63, 42, -9, 44.9998, -88.0001)

[node name="Sidebar" type="PanelContainer" parent="ProjectWrapper"]
layout_mode = 2

[node name="SidebarBackground" type="ColorRect" parent="ProjectWrapper/Sidebar"]
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 0.290196, 0.513726, 1)

[node name="InnerSidebar" type="TabContainer" parent="ProjectWrapper/Sidebar"]
layout_mode = 2

[node name="Types Overview" type="VBoxContainer" parent="ProjectWrapper/Sidebar/InnerSidebar"]
layout_mode = 2

[node name="Types" type="OptionButton" parent="ProjectWrapper/Sidebar/InnerSidebar/Types Overview"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.03

[node name="StateChartDebugger" parent="ProjectWrapper/Sidebar/InnerSidebar" instance=ExtResource("2_xjjh2")]
visible = false
custom_minimum_size = Vector2(483.195, 0)
layout_mode = 2
initial_node_to_watch = NodePath("../../../../StateChart")

[node name="TooltipContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 182.0
offset_bottom = 26.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="TooltipContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SummaryTooltip" type="Label" parent="TooltipContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Testing text hello world"

[node name="RegionDescriptionOverlay" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_drfbh")
theme_override_styles/panel = SubResource("StyleBoxEmpty_rfskh")

[node name="RegionDescriptionBlackout" type="ColorRect" parent="RegionDescriptionOverlay"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.537255)

[node name="MarginContainer" type="MarginContainer" parent="RegionDescriptionOverlay"]
layout_mode = 2
theme = ExtResource("6_drfbh")

[node name="RegionDescriptionBackground" type="ColorRect" parent="RegionDescriptionOverlay/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 0.290196, 0.513726, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="RegionDescriptionOverlay/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mu5s2")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="DescriptionWrapper" type="VBoxContainer" parent="RegionDescriptionOverlay/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_drfbh")

[node name="Title" type="RichTextLabel" parent="RegionDescriptionOverlay/MarginContainer/ScrollContainer/DescriptionWrapper"]
clip_contents = false
layout_mode = 2
focus_mode = 2
theme = ExtResource("6_drfbh")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "This is a Title text."
fit_content = true
scroll_active = false
selection_enabled = true

[node name="Description2" type="RichTextLabel" parent="RegionDescriptionOverlay/MarginContainer/ScrollContainer/DescriptionWrapper"]
layout_mode = 2
focus_mode = 2
theme = ExtResource("6_drfbh")
bbcode_enabled = true
text = "[ul]
This region is home to mirror neurons which are special cells using these cells we can watch a person perform a task or behave in a certain way and then mimic that person to quickly learn the task or act as if we are like them these cells also fire when we imagine doing something but don't actually act. This region acts as our minds very own Star Trek Hollow deck a place where we can play out real life and fanciful events.
	here's how it works we select the context which might be in the immediate situation before us a future event such as upcoming tests or race or a historical or imaginative context such as a childhood birthday party or ancient Rome then we play out the simulation perhaps asking what it this region does its best to supply details and simulate what would likely happen thus we can use this region to make sensible guesses consider the words car Road and Flat Tire now imagine a larger scene or several scenes perhaps an accident occurred who or what else is in the see how do people feel don't really answer the question just play as if it can also Supply you with additional words that fit the implied context, such as traffic, ambulance, or rain.
	<br> <br> People who under use this region may display a lack of empathy and find it hard to learn by imitation or inference puzzle over other's motives dislike what if questions and brainstorming and or feel challenged to think outside the box.
	This region is not analytical that we may feel like we are analyzing as we explore a myriad of scenarios simply it helps us make smart guesses based on context and imitation people who use this region with skill are able to quickly build rapport with others and make insightful guesses about people without having any particular reason or theory in mind their mental stimulation simply reveal what they need to know using this region May frustrate us Sometimes using it can be fun and provide ideas for why people act as they do however our inferences maybe wrong moreover while this region provides an appearance of empathy and Rapport the active mirroring others does not mean we truly care.
[ul]"
fit_content = true
scroll_active = false
selection_enabled = true

[node name="PauseOverlay" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_drfbh")
theme_override_styles/panel = SubResource("StyleBoxEmpty_rfskh")

[node name="PauseOverlayBlackout" type="ColorRect" parent="PauseOverlay"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.537255)

[node name="MarginContainer" type="MarginContainer" parent="PauseOverlay"]
layout_mode = 2
theme = ExtResource("6_drfbh")

[node name="PauseOverlayBackground" type="ColorRect" parent="PauseOverlay/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 0.290196, 0.513726, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="PauseOverlay/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mu5s2")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="DescriptionWrapper" type="VBoxContainer" parent="PauseOverlay/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_drfbh")

[node name="Title" type="RichTextLabel" parent="PauseOverlay/MarginContainer/ScrollContainer/DescriptionWrapper"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme = ExtResource("6_drfbh")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Paused"
fit_content = true
scroll_active = false
autowrap_mode = 0
selection_enabled = true

[node name="Description2" type="RichTextLabel" parent="PauseOverlay/MarginContainer/ScrollContainer/DescriptionWrapper"]
layout_mode = 2
focus_mode = 2
theme = ExtResource("6_drfbh")
bbcode_enabled = true
text = "[ul]
This is the pause menu text
This is more pause menu text
Even moooore.
[/ul]"
fit_content = true
scroll_active = false
selection_enabled = true

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_qrmke")
track_in_editor = true

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("8_c1454")

[node name="Mode" type="Node" parent="StateChart/Root"]
script = ExtResource("7_g86ti")
initial_state = NodePath("TypeOverviews")

[node name="TypeOverviews" type="Node" parent="StateChart/Root/Mode"]
script = ExtResource("8_3nrxm")

[node name="ToWholeBrain" type="Node" parent="StateChart/Root/Mode/TypeOverviews"]
script = ExtResource("9_u1hkt")
to = NodePath("../../WholeBrainStates")
event = &"to_whole"

[node name="ToSimulated" type="Node" parent="StateChart/Root/Mode/TypeOverviews"]
script = ExtResource("9_u1hkt")
to = NodePath("../../SimulatedActivity")
event = &"to_simulated"

[node name="WholeBrainStates" type="Node" parent="StateChart/Root/Mode"]
script = ExtResource("8_3nrxm")

[node name="ToTypes" type="Node" parent="StateChart/Root/Mode/WholeBrainStates"]
script = ExtResource("9_u1hkt")
to = NodePath("../../TypeOverviews")
event = &"to_types"

[node name="SimulatedActivity" type="Node" parent="StateChart/Root/Mode"]
script = ExtResource("8_3nrxm")

[node name="Overlay" type="Node" parent="StateChart/Root"]
script = ExtResource("7_g86ti")
initial_state = NodePath("NoOverlay")

[node name="NoOverlay" type="Node" parent="StateChart/Root/Overlay"]
script = ExtResource("8_3nrxm")

[node name="ToPause" type="Node" parent="StateChart/Root/Overlay/NoOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../PauseOverlay")
event = &"to_pause"

[node name="ToRegion" type="Node" parent="StateChart/Root/Overlay/NoOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../RegionOverlay")
event = &"to_region"

[node name="PauseOverlay" type="Node" parent="StateChart/Root/Overlay"]
script = ExtResource("8_3nrxm")

[node name="ToNone" type="Node" parent="StateChart/Root/Overlay/PauseOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../NoOverlay")
event = &"to_none"

[node name="ToRegion" type="Node" parent="StateChart/Root/Overlay/PauseOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../RegionOverlay")
event = &"to_region"

[node name="RegionOverlay" type="Node" parent="StateChart/Root/Overlay"]
script = ExtResource("8_3nrxm")

[node name="ToNone" type="Node" parent="StateChart/Root/Overlay/RegionOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../NoOverlay")
event = &"to_none"

[node name="ToPause" type="Node" parent="StateChart/Root/Overlay/RegionOverlay"]
script = ExtResource("9_u1hkt")
to = NodePath("../../PauseOverlay")
event = &"to_pause"

[node name="IsRegionHovered" type="Node" parent="StateChart/Root"]
script = ExtResource("7_g86ti")
initial_state = NodePath("No")

[node name="No" type="Node" parent="StateChart/Root/IsRegionHovered"]
script = ExtResource("8_3nrxm")

[node name="ToYes" type="Node" parent="StateChart/Root/IsRegionHovered/No"]
script = ExtResource("9_u1hkt")
to = NodePath("../../Yes")
event = &"to_yes"

[node name="Yes" type="Node" parent="StateChart/Root/IsRegionHovered"]
script = ExtResource("8_3nrxm")

[node name="ToNo" type="Node" parent="StateChart/Root/IsRegionHovered/Yes"]
script = ExtResource("9_u1hkt")
to = NodePath("../../No")
event = &"to_no"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("10_q3rvt")

[connection signal="typeSelected" from="." to="ProjectWrapper/BrainPanel/Brain" method="_on_guide_screen_type_selected"]
[connection signal="item_selected" from="ProjectWrapper/Sidebar/InnerSidebar/Types Overview/Types" to="." method="_on_types_item_selected"]
[connection signal="state_processing" from="StateChart/Root/Overlay/NoOverlay" to="." method="_on_no_overlay_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Overlay/PauseOverlay" to="." method="_on_pause_overlay_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Overlay/PauseOverlay" to="." method="_on_pause_overlay_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Overlay/RegionOverlay" to="." method="_on_region_overlay_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Overlay/RegionOverlay" to="." method="_on_region_overlay_state_exited"]
[connection signal="state_processing" from="StateChart/Root/Overlay/RegionOverlay" to="." method="_on_region_overlay_state_processing"]
[connection signal="event_received" from="StateChart/Root/IsRegionHovered/Yes" to="." method="_on_yes_event_received"]

[editable path="ProjectWrapper/BrainPanel/Brain"]
